apps/kubepets/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kubepets
  namespace: kubepets
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`homelab.zaverous.com`)
      priority: 100
      services:
        - name: kubepets-frontend
          port: 80
  tls:
    secretName: homelab-zaverous-com-tls
